[project]
name = "WEBP-PNG"
version = "0.0.1"
authors = [
    { name="Jamie Kemman", email="jkemma01@rams.shepherd.edu" },
]
description = "A simple one way conversion utility for WEBP files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/Camithilwen/Advanced-Language-Concepts"